# ai-memory-hub

./: .gitignore  LICENSE  README.md  decode_mojibake.py  pyproject.toml
docs/: ARCHITECTURE.md  CODEX_MCP.md  FAQ.md  TROUBLESHOOTING.md
scripts/: install.ps1  install.sh  run-mcp.py  run-pipeline.py
src/ai_memory_hub/: __init__.py  cli.py
src/ai_memory_hub/core/: __init__.py  config.py  dream_models.py  exceptions.py  logger.py  models.py  profile_models.py  skill_models.py  utils.py
src/ai_memory_hub/extraction/: __init__.py  extractors.py  llm_analysis.py  quality.py  skill_extractor.py  sources.py
src/ai_memory_hub/integrations/: __init__.py  client_config.py  doctor.py  mcp_server.py  release.py  scheduler.py
src/ai_memory_hub/pipeline/: __init__.py  bootstrap.py  growth.py  pipeline.py
src/ai_memory_hub/services/: __init__.py  brainstorming.py  cli_utils.py  dream.py  manage.py  obsidian.py  profile_service.py  render.py  search.py  skill_service.py  stats.py  usage_feedback.py  wiki.py
src/ai_memory_hub/storage/: __init__.py  db.py  dream_store.py  skill_store.py  vector.py
tests/: test_client_config.py  test_wiki.py
